@@ -84,6 +84,8 @@ xx/xx/2004 - 2.0.0-WIP
 	- Make ntfs_attr_update_mapping_pairs and ntfs_inode_add_attrlist use
 	  ntfs_inode_free_space when there is no enough space for attribute
 	  list.  (Yura)
+	- Remove inode.h::NIno{Clear,Set,}AttrListNonResident and attr_list_rl
+	  field from inode.h::_ntfs_inode struct. Adapt all users.  (Yura)
 
 04/09/2004 - 1.9.4 - Urgent bug fixes.
 
